k8s/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scimitar-backend
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scimitar-app
  template:
    metadata:
      labels:
        app: scimitar-app
    spec:
      containers:
        - name: scimitar-backend
          image: matsubokkuri/scimitar-backend:2.7
          imagePullPolicy: IfNotPresent
      volumes:
        - name: information-volume
          configMap:
            name: exercise-config
            items:
              - key: information.txt
                path: information.txt
      restartPolicy: Always
