k8s/manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: exercises
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scimitar-app
  template:
    metadata:
      labels:
        app: scimitar-app
    spec:
      containers:
        - name: scimitar-backend
          image: matsubokkuri/scimitar-backend:1.14.6
          imagePullPolicy: IfNotPresent
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  psql -h "$DB_HOST" -U "$DB_USER" -d "$DB_NAME" -c 'SELECT 1 FROM pingpong' >/dev/null 2>&1
            initialDelaySeconds: 15
            timeoutSeconds: 2
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  psql -h "$DB_HOST" -U "$DB_USER" -d "$DB_NAME" -c 'SELECT 1 FROM pingpong' >/dev/null 2>&1
            initialDelaySeconds: 60
            timeoutSeconds: 2
