k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scimitar-deployment
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scimitar-app
  template:
    metadata:
      labels:
        app: scimitar-app
    spec:
      containers:
        - name: scimitar-app
          image: matsubokkuri/scimitar-app:2.5
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /config
              name: information-volume
              readOnly: true
        - name: scimitar-backend
          image: matsubokkuri/scimitar-backend:2.7
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
