k8s/manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scimitar-app
      tier: frontend
  template:
    metadata:
      labels:
        app: scimitar-app
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: matsubokkuri/scimitar-app:4.1.19
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /config
              name: information-volume
              readOnly: true
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 30
            httpGet:
              port: 3000
              path: /healthZ
              scheme: HTTP
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
      volumes:
        - name: information-volume
          configMap:
            name: exercise-config
            items:
              - key: information.txt
                path: information.txt

      restartPolicy: Always
